# climso-auto

./: .cproject  .gitignore  .project  .travis.yml  LICENSE  Makefile  Makefile.am  Makefile.in  Makefile.old  README.md  README.md~  TODO  Test.mk  autotroll.mk  check_framework.m4  config.h.in  configure  configure.ac  fake.tif  fenetreprincipale.ui  index.html  note-choix-autotools  notes-bugs  notes-git  params.json  pbms-resolus-cameroa  pour-compiler  programmer-avec-qt  test.tif  test2-3.tif  test2.tif
Libraries/arduino_serial_lib/: arduino-serial-lib.c  arduino-serial-lib.h
Libraries/camera_sbig_lib/: csbigcam.cpp  csbigcam.h  csbigimg.h  longnam.h  lpardrv.h  main.cpp
Makefiles/: Makefile 2
Sources/: camera.c  camera.cpp  camera.h  cmd-arduino.c  cmd-arduino.h  cmd_arduino.c  cmd_arduino.h  convol.c  convol.h  crea_tiff_3.h  diametre_soleil.c  diametre_soleil.h  exceptions.cpp  exceptions.h  image.cpp  image.h  interpol.c  main_arduino.c  main_camera.c  main_global.c  main_image.cpp  main_position.c  testtiff.tiff
Sources/camera_sbig_library/: csbigcam.cpp  csbigimg.h
climso-auto.xcodeproj/: project.pbxproj
climso-auto.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
climso-auto.xcodeproj/project.xcworkspace/xcshareddata/: climso-auto.xccheckout  correl_images.xccheckout
climso-auto.xcodeproj/project.xcworkspace/xcuserdata/mael65.xcuserdatad/: UserInterfaceState.xcuserstate
climso-auto.xcodeproj/project.xcworkspace/xcuserdata/mael65.xcuserdatad/xcdebugger/: Expressions.xcexplist
climso-auto.xcodeproj/xcuserdata/mael65.xcuserdatad/xcschemes/: All.xcscheme  Arduino.xcscheme  Camera.xcscheme  Image.xcscheme  Position.xcscheme  Run.xcscheme  correl_images.xcscheme  xcschememanagement.plist
correl_images.xcodeproj/: project.pbxproj
correl_images.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
correl_images.xcodeproj/project.xcworkspace/xcshareddata/: correl_images.xccheckout
correl_images.xcodeproj/project.xcworkspace/xcuserdata/mael65.xcuserdatad/: UserInterfaceState.xcuserstate
correl_images.xcodeproj/xcuserdata/mael65.xcuserdatad/xcschemes/: correl_images.xcscheme  xcschememanagement.plist
m4/: absolute-header.m4  autotroll.m4  check_framework.m4  explications
src/: .gitignore  Makefile.am  Makefile.am.old  Makefile.in  arduino.cpp  arduino.h  camera.c  camera.cpp  camera.h  camera_fake.cpp  camera_fake.h  camera_sbig.cpp  camera_sbig.h  capture.cpp  capture.h  cmd_arduino.c  cmd_arduino.h  convol.c  convol.cpp  convol.h  crea_tiff_3.c  crea_tiff_3.cpp  crea_tiff_3.h  csbigcam.cpp  csbigcam.h  csbigimg.h  diametre_soleil.c  diametre_soleil.h  exceptions.cpp  exceptions.h  fcts_LK3.c  fcts_LK3.cpp  fcts_LK3.h  fcts_MV_en_C.c  fcts_MV_en_C.h  fenetreprincipale.cpp  fenetreprincipale.h  fenetreprincipale.ui  guidage.cpp  guidage.h  (+23 more)
src/sbig_class_library/: Makefile  csbigcam.cpp  csbigimg.cpp  fitsio.h  sbig2fits.cpp  sbigudrv.h
